--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
           </div>
     
           <div class="w3-half">
-            <img src="/3.jpg" style="width:100%">
+            <img src="3.jpg" style="width:100%">
             <img src="/7.jpeg" style="width:100%">
             
           </div>
